--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "HawaiiTourismApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
+    "icon": "src/assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./src/assets/splash.png",
+      "image": "src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,13 +16,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "foregroundImage": "src/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.shashankg86.HawaiiTourismApp"
     },
     "web": {
-      "favicon": "./src/assets/favicon.png"
+      "favicon": "src/assets/favicon.png"
     },
     "plugins": [
       "expo-font"
