--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~51.0.17",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.7",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
